--- a/src/main/webapp/WEB-INF/view/common/top.jspf
+++ b/src/main/webapp/WEB-INF/view/common/top.jspf
@@ -6,4 +6,6 @@
 <head>
 <meta charset="UTF-8">
 <title>유닛</title>
+<meta name="_csrf" content="${_csrf.token}"/>
+<meta name="_csrf_header" content="${_csrf.headerName}"/>
 <script type="text/javascript" src="/js/util/jquery-3.7.1.min.js"></script>
